--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,12 +1,16 @@
 <div id="<%= dom_id article %>">
-  <p>
-    <strong>Title:</strong>
-    <%= article.title %>
-  </p>
+  <div class="card-category"
+       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path article.photo.key, height: 2000, crop: :fill %>')"
+  >
+    <p>
+      <strong>Title:</strong>
+      <%= article.title %>
+    </p>
+  </div>
 
-  <p>
-    <strong>Body:</strong>
-    <%= article.body %>
-  </p>
+    <p>
+      <strong>Body:</strong>
+      <%= article.body %>
+    </p>
 
 </div>
